--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nerdwallet/shepherd",
+  "name": "@aorinevo/shepherd",
   "version": "1.4.1",
   "description": "A utility for applying code changes across many repositories",
   "keywords": [
@@ -46,36 +46,36 @@
     "lib"
   ],
   "dependencies": {
-    "@octokit/rest": "^15.18.1",
-    "@types/js-yaml": "^3.11.2",
-    "chalk": "^2.4.1",
+    "@octokit/rest": "17.x",
+    "@types/js-yaml": "^3.12.3",
+    "chalk": "^2.4.2",
     "child-process-promise": "^2.2.1",
-    "commander": "^2.16.0",
+    "commander": "^2.20.3",
     "fs-extra": "^6.0.1",
     "fs-extra-promise": "^1.0.1",
     "joi": "^13.4.0",
-    "js-yaml": "^3.12.0",
-    "lodash": "^4.17.10",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
     "log-symbols": "^2.2.0",
     "netrc": "^0.1.4",
-    "ora": "^2.1.0",
+    "ora": "^4.0.3",
     "preferences": "^1.0.2",
-    "simple-git": "^1.96.0"
+    "simple-git": "^1.132.0"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.4",
-    "@types/fs-extra-promise": "^1.0.7",
-    "@types/jest": "^23.3.0",
-    "@types/joi": "^13.4.0",
-    "@types/lodash": "^4.14.112",
-    "@types/log-symbols": "^2.0.0",
-    "@types/node": "^10.5.2",
-    "@types/ora": "^1.3.4",
-    "jest": "^23.6.0",
+    "@types/fs-extra": "^8.1.0",
+    "@types/fs-extra-promise": "^1.0.8",
+    "@types/jest": "^25.2.1",
+    "@types/joi": "^13.6.3",
+    "@types/lodash": "^4.14.149",
+    "@types/log-symbols": "^3.0.0",
+    "@types/node": "^13.11.0",
+    "@types/ora": "^3.2.0",
+    "jest": "^25.2.7",
     "jest-plugin-fs": "^2.9.0",
-    "ts-jest": "^23.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
+    "ts-jest": "^25.3.1",
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3"
   },
   "publishConfig": {
     "access": "public"
